# primer

./: .env.example  .gitignore  CLAUDE.md  NEXT_SESSION.md  README.md  ROADMAP.md  SPECULATIONS_AND_IDEAS.md  primer_next_session.md  primer_technical_spec.md
.githooks/: pre-commit
spikes/whisper_probe/: Cargo.toml  rust-toolchain.toml
spikes/whisper_probe/src/: main.rs
src/: Cargo.toml  rust-toolchain.toml
src/crates/primer-classifier/: Cargo.toml
src/crates/primer-classifier/src/: consts.rs  lib.rs  llm.rs  settings.rs  stub.rs
src/crates/primer-cli/: Cargo.toml  build.rs
src/crates/primer-cli/src/: cli_support.rs  main.rs  speech_loop.rs
src/crates/primer-cli/src/cli_support/: tests.rs
src/crates/primer-cli/src/speech_loop/: audio_thread.rs  dialogue_responder.rs  mod.rs  stdout_observer.rs
src/crates/primer-comprehension/: Cargo.toml
src/crates/primer-comprehension/src/: consts.rs  lib.rs  llm.rs  settings.rs  stub.rs
src/crates/primer-comprehension/src/llm/: tests.rs
src/crates/primer-core/: Cargo.toml
src/crates/primer-core/src/: backend.rs  classifier.rs  comprehension.rs  config.rs  consts.rs  conversation.rs  embedder.rs  error.rs  extractor.rs  i18n.rs  inference.rs  knowledge.rs  learner.rs  lib.rs  llm_util.rs  prompt_budget.rs  reasoning.rs  retry.rs  router.rs  rrf.rs  session_timing.rs  speech.rs  storage.rs  vocab.rs
src/crates/primer-core/src/consts/: tests.rs
src/crates/primer-core/src/i18n/: tests.rs
src/crates/primer-core/src/speech/: tests.rs
src/crates/primer-embedding/: Cargo.toml
src/crates/primer-embedding/src/: fastembed_backend.rs  lib.rs  ollama.rs  openai_compat.rs  stub.rs
src/crates/primer-engine/: Cargo.toml
src/crates/primer-engine/src/: learner.rs  lib.rs  paths.rs  wiring.rs
src/crates/primer-engine/src/wiring/: backend.rs  build_main_backend_tests.rs  classifier_construction_tests.rs  comprehension_construction_tests.rs  embedders.rs  extractor_construction_tests.rs  main_backend_plan_tests.rs  mod.rs  qnn_dispatch_tests.rs  resolve_fallback_model_tests.rs  subsystems.rs
src/crates/primer-extractor/: Cargo.toml
src/crates/primer-extractor/src/: consts.rs  lib.rs  llm.rs  settings.rs  stub.rs
src/crates/primer-gui/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src/crates/primer-gui/capabilities/: default.json
src/crates/primer-gui/icons/: icon.icns
src/crates/primer-gui/src/: config.rs  csp.rs  diagnostics_toggle_contract.rs  lib.rs  main.rs  modal_dialog_contract.rs  paths.rs  reasoning_markers.rs  responsive_layout_contract.rs  state.rs  types.rs  validation.rs  wiring.rs
src/crates/primer-gui/src/commands/: mod.rs  session.rs  settings.rs  speech_diag.rs  voice.rs  voice_android.rs
src/crates/primer-gui/src/config/: mod.rs  persistence.rs  tests.rs  types.rs  view.rs
src/crates/primer-gui/src/paths/: tests.rs
src/crates/primer-gui/src/responsive_layout_contract/: tests.rs
src/crates/primer-gui/src/voice/: assets.rs  backends.rs  backends_android.rs  download.rs  mod.rs  observer.rs  responder.rs
src/crates/primer-gui/src/wiring/: tests.rs
src/crates/primer-gui/ui/: app.js  index.html  picker.js  settings.js  styles.css  voice.js
src/crates/primer-inference/: Cargo.toml
src/crates/primer-inference/examples/: llamacpp_bench.rs  qnn_bench.rs
src/crates/primer-inference/src/: cloud.rs  fallback.rs  lib.rs  ollama.rs  openai_compat.rs  reasoning_stream.rs  router.rs  stream_error.rs  stub.rs
src/crates/primer-inference/src/bench/: metrics.rs  mod.rs  prompts.rs  run.rs  thermal.rs
src/crates/primer-inference/src/cloud/: classify_tests.rs  tests.rs
src/crates/primer-inference/src/llamacpp/: backend.rs  engine.rs  mod.rs  params.rs
src/crates/primer-inference/src/ollama/: tests.rs
src/crates/primer-inference/src/openai_compat/: mod.rs  tests.rs
src/crates/primer-inference/src/qnn/: bench.rs  meta.rs  metrics.rs  mod.rs  template.rs
src/crates/primer-inference/src/router/: mod.rs  tests.rs
src/crates/primer-inference/tests/: bench_corpus.rs  llamacpp_smoke.rs
src/crates/primer-kb-load/: Cargo.toml
src/crates/primer-kb-load/src/: lib.rs  tests.rs
src/crates/primer-kb-load/tests/: bm25_floor_tripwire.rs  retrieval_quality.rs  retrieval_quality_de.rs  retrieval_quality_hybrid.rs  retrieval_quality_hybrid_de.rs  retrieval_sweep.rs  retrieval_sweep_de.rs  retrieval_sweep_hybrid.rs  retrieval_sweep_hybrid_de.rs
src/crates/primer-kb-load/tests/common/: de.rs  mod.rs  sanity_tests.rs  sweep.rs
src/crates/primer-knowledge/: Cargo.toml
src/crates/primer-knowledge/src/: embedding_model.rs  fts.rs  ingest.rs  lib.rs  locale_sql.rs  retrieval.rs  schema.rs  tests.rs  vector.rs
src/crates/primer-knowledge/tests/: bulk_insert_bench.rs
src/crates/primer-pedagogy/: Cargo.toml
src/crates/primer-pedagogy/prompts/: de.toml  en.toml  hi.toml
src/crates/primer-pedagogy/src/: consts.rs  dialogue_manager.rs  lib.rs  prompt_builder.rs  prompt_pack.rs  vocab.rs
src/crates/primer-pedagogy/src/dialogue_manager/: apply.rs  background.rs  budget_tier.rs  learner_update.rs  lifecycle.rs  mod.rs  retrieval.rs  summary.rs  test_support.rs  turn.rs
src/crates/primer-pedagogy/src/prompt_builder/: tests.rs
src/crates/primer-qnn-sys/: Cargo.toml
src/crates/primer-qnn-sys/src/: bindings.rs  lib.rs
src/crates/primer-speech/: Cargo.toml  build.rs
src/crates/primer-speech/examples/: tts_hello.rs  tts_macos_pcm_smoke.rs  tts_supertonic_hello.rs
src/crates/primer-speech/src/: cpal_io.rs  lib.rs  locale_defaults.rs  phrase_split.rs  piper.rs  piper_config.rs  silero.rs  stub.rs  supertonic.rs  time_ms.rs  vad_debounce.rs  whisper.rs
src/crates/primer-speech/swift-sources/: Macos26Pipeline.swift  Macos26PipelineImpl.swift
src/crates/primer-speech/tests/: macos26_smoke.rs  macos_feature_compiles.rs  macos_locale.rs  macos_permissions.rs  macos_stt.rs  macos_tts.rs  macos_tts_oneshot.rs  macos_voice.rs  voice_loop_macos_branch.rs  whisper_stream_reuse.rs
src/crates/primer-storage/: Cargo.toml
src/crates/primer-storage/src/: catalog.rs  lib.rs  schema.rs
(+440 files in other folders)
