[workspace]
resolver = "2"
members = [
    "crates/primer-core",
    "crates/primer-inference",
    "crates/primer-speech",
    "crates/primer-knowledge",
    "crates/primer-pedagogy",
    "crates/primer-cli",
    "crates/primer-storage",
    "crates/primer-classifier",
    "crates/primer-extractor",
    "crates/primer-comprehension",
    "crates/primer-kb-load",
    "crates/primer-embedding",
    "crates/primer-engine",
    "crates/primer-gui",
]
exclude = ["vendor/piper-rs", "vendor/silero-vad-rust"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hherb/primer"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database (knowledge base, learner model persistence)
rusqlite = { version = "0.39", features = ["bundled"] }

# HTTP (cloud API backend)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for session/entity IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Audio I/O — used by the cpal feature of primer-speech for mic capture
# and speaker playback. ringbuf provides the lock-free SPSC ring buffers
# the cpal callbacks push/pull through (cannot block / allocate); rubato
# does sample-rate conversion (cpal devices on Mac are typically 48 kHz,
# silero/whisper want 16 kHz, piper voices vary).
cpal = "0.17"
ringbuf = "0.4"
rubato = "0.16"

# Apple framework bindings — only consumed by primer-speech's
# `macos-native` feature (and its `_macos_smoke_check` precursor).
# Pulls nothing on non-macOS builds because every primer-speech feature
# that depends on them is opt-in.
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSLocale", "NSRunLoop", "NSDate"] }
objc2-avf-audio = { version = "0.3", default-features = false, features = ["AVSpeechSynthesis", "AVAudioBuffer", "AVAudioFormat", "AVAudioTypes", "block2"] }
objc2-speech = "0.3"
block2 = "0.6"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# .env file loading (so ANTHROPIC_API_KEY can live in a gitignored .env)
dotenvy = "0.15"

# Unicode normalization (used by primer-cli to slug learner names into
# stable filenames regardless of NFC/NFD encoding).
unicode-normalization = "0.1"

# Test helpers
tempfile = "3"

# Tauri 2.x desktop GUI runtime. Pinned to the 2.x line; the actual
# feature set is selected per consumer (primer-gui today).
tauri = { version = "2", default-features = false }
tauri-build = { version = "2" }

# Workspace crates
primer-core = { path = "crates/primer-core" }
primer-inference = { path = "crates/primer-inference" }
primer-speech = { path = "crates/primer-speech" }
primer-knowledge = { path = "crates/primer-knowledge" }
primer-pedagogy = { path = "crates/primer-pedagogy" }
primer-storage = { path = "crates/primer-storage" }
primer-classifier = { path = "crates/primer-classifier" }
primer-extractor = { path = "crates/primer-extractor" }
primer-comprehension = { path = "crates/primer-comprehension" }
primer-kb-load = { path = "crates/primer-kb-load" }
primer-embedding = { path = "crates/primer-embedding" }
primer-engine = { path = "crates/primer-engine" }

[patch.crates-io]
# Vendored piper-rs patched for ort 2.0.0-rc.10 API compatibility.
# The published 0.1.9 was built against rc.9; the intersection of supported
# ort versions between piper-rs 0.1.x and silero-vad-rust 6.2 is empty.
piper-rs = { path = "vendor/piper-rs" }
# Vendored silero-vad-rust patched to replace u32::is_multiple_of (still
# unstable, see #128101) with `% N == 0`. Two call sites in model.rs and
# utils_vad.rs. Drop this patch once is_multiple_of is stabilised upstream
# AND a silero-vad-rust release picks up the API surface.
silero-vad-rust = { path = "vendor/silero-vad-rust" }
