[package]
name = "primer-cli"
description = "Text-mode REPL for testing the Primer's Socratic dialogue"
version.workspace = true
edition.workspace = true

[[bin]]
name = "primer"
path = "src/main.rs"

[dependencies]
primer-core.workspace = true
primer-classifier.workspace = true
primer-extractor.workspace = true
primer-comprehension.workspace = true
primer-inference = { path = "../primer-inference" }
primer-speech = { path = "../primer-speech" }
primer-knowledge = { path = "../primer-knowledge" }
primer-kb-load = { path = "../primer-kb-load" }
primer-embedding = { path = "../primer-embedding" }
primer-pedagogy = { path = "../primer-pedagogy" }
primer-storage = { path = "../primer-storage" }
tokio.workspace = true
clap.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-normalization.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
# ringbuf is only needed when the speech feature is on (to push synth
# samples into the cpal speaker stream's SPSC buffer). Listed
# unconditionally because Cargo doesn't yet support
# feature-gated workspace deps cleanly; the unused-import on a non-speech
# build is suppressed via `cfg(feature = "speech")` at the use sites.
ringbuf.workspace = true

[features]
default = []

# Hybrid retrieval via the fastembed-rs (BGE-M3) backend.
# **Temporarily not in `default`** — see primer-embedding's Cargo.toml for the
# rationale (ort 2.0.0-rc.10 vs rc.12 vendor pin, plus first-build CI
# validation). User preference is for this to ship default-on; flip
# `default = ["embedding"]` once CI proves out the build.
# Conflicts with `speech` today: the `speech` features pull ort=rc.10
# via vendored silero/whisper/piper, while fastembed pulls rc.12.
# Workaround: `cargo run --no-default-features --features speech`.
embedding = ["primer-embedding/fastembed"]

# Lightweight Ollama-backed embedder. Useful for prototyping; not the
# recommended runtime backend.
ollama-embedding = ["primer-embedding/ollama"]

# Voice REPL via --speech. Pulls every speech backend feature so the
# state machine can compose VAD → STT → DialogueManager → TTS → cpal
# without further conditional compilation in the binary.
speech = [
    "primer-speech/silero",
    "primer-speech/whisper",
    "primer-speech/piper",
    "primer-speech/cpal",
]
