[package]
name = "primer-cli"
description = "Text-mode REPL for testing the Primer's Socratic dialogue"
version.workspace = true
edition.workspace = true

[[bin]]
name = "primer"
path = "src/main.rs"

[dependencies]
primer-core.workspace = true
primer-classifier.workspace = true
primer-extractor.workspace = true
primer-comprehension.workspace = true
primer-inference = { path = "../primer-inference" }
primer-speech = { path = "../primer-speech" }
primer-knowledge = { path = "../primer-knowledge" }
primer-kb-load = { path = "../primer-kb-load" }
primer-embedding = { path = "../primer-embedding" }
primer-pedagogy = { path = "../primer-pedagogy" }
primer-storage = { path = "../primer-storage" }
primer-engine = { path = "../primer-engine" }
tokio.workspace = true
clap.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
# ringbuf is only needed when the speech feature is on (to push synth
# samples into the cpal speaker stream's SPSC buffer). Listed
# unconditionally because Cargo doesn't yet support
# feature-gated workspace deps cleanly; the unused-import on a non-speech
# build is suppressed via `cfg(feature = "speech")` at the use sites.
ringbuf.workspace = true

[features]
default = []

# Hybrid retrieval via the fastembed-rs (BGE-M3) backend.
# Default-off pending CI validation of the cdn.pyke.io ort-runtime
# download path; flip to `default = ["embedding"]` once that's proven.
# `embedding` and `speech` build cleanly together because both paths
# resolve to ort = "=2.0.0-rc.10" (fastembed pinned to =5.7.0 here,
# which is the last line that targets rc.10). See primer-embedding's
# Cargo.toml for the version-pin rationale. Forwarded to primer-engine
# so the shared `build_fastembed_embedder` helper picks up the right
# `#[cfg(feature = "embedding")]` branch.
embedding = ["primer-embedding/fastembed", "primer-engine/embedding"]

# Lightweight Ollama-backed embedder. Useful for prototyping; not the
# recommended runtime backend.
ollama-embedding = ["primer-embedding/ollama", "primer-engine/ollama-embedding"]

# OpenAI-compatible embedder (oMLX, LM Studio, vLLM, Together, etc.).
openai-compat-embedding = ["primer-embedding/openai-compat", "primer-engine/openai-compat-embedding"]

# Voice REPL via --speech. Pulls every speech backend feature so the
# state machine can compose VAD → STT → DialogueManager → TTS → cpal
# without further conditional compilation in the binary.
# `voice-loop` is the lifted shared state machine in primer-speech;
# it implies silero + whisper + piper + cpal so we list it once here.
speech = [
    "primer-speech/silero",
    "primer-speech/whisper",
    "primer-speech/piper",
    "primer-speech/cpal",
    "primer-speech/voice-loop",
]
