[package]
name = "primer-cli"
description = "Text-mode REPL for testing the Primer's Socratic dialogue"
version.workspace = true
edition.workspace = true

[[bin]]
name = "primer"
path = "src/main.rs"

[dependencies]
primer-core.workspace = true
primer-classifier.workspace = true
primer-extractor.workspace = true
primer-comprehension.workspace = true
primer-inference = { path = "../primer-inference" }
primer-speech = { path = "../primer-speech" }
primer-knowledge = { path = "../primer-knowledge" }
primer-kb-load = { path = "../primer-kb-load" }
primer-embedding = { path = "../primer-embedding" }
primer-pedagogy = { path = "../primer-pedagogy" }
primer-storage = { path = "../primer-storage" }
primer-engine = { path = "../primer-engine" }
tokio.workspace = true
clap.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
# ringbuf is only needed when the speech feature is on (to push synth
# samples into the cpal speaker stream's SPSC buffer). Listed
# unconditionally because Cargo doesn't yet support
# feature-gated workspace deps cleanly; the unused-import on a non-speech
# build is suppressed via `cfg(feature = "speech")` at the use sites.
ringbuf.workspace = true

[features]
# Hybrid retrieval is default-on (BM25 + dense-vector RRF via BGE-M3).
# The cdn.pyke.io ort-runtime download is proven in CI on Linux (the
# default `cargo test` job now builds embedding) and macOS (the
# feature-combos-macos job's fastembed step). A `--no-default-features`
# build drops to BM25-only and the runtime default tracks that via the
# `cfg_attr` on `--embedder-backend` in main.rs. Android stays BM25-only
# by guidance (the cross-compile guard pins `--no-default-features`; see
# CLAUDE.md / issue #157).
default = ["embedding"]

# Hybrid retrieval via the fastembed-rs (BGE-M3) backend.
# `embedding` and `speech` build cleanly together because both paths
# resolve to ort = "=2.0.0-rc.10" (fastembed pinned to =5.7.0 here,
# which is the last line that targets rc.10). See primer-embedding's
# Cargo.toml for the version-pin rationale. Forwarded to primer-engine
# so the shared `build_fastembed_embedder` helper picks up the right
# `#[cfg(feature = "embedding")]` branch.
embedding = ["primer-embedding/fastembed", "primer-engine/embedding"]

# Lightweight Ollama-backed embedder. Useful for prototyping; not the
# recommended runtime backend.
ollama-embedding = ["primer-embedding/ollama", "primer-engine/ollama-embedding"]

# OpenAI-compatible embedder (oMLX, LM Studio, vLLM, Together, etc.).
openai-compat-embedding = ["primer-embedding/openai-compat", "primer-engine/openai-compat-embedding"]

# Voice REPL via --speech. Pulls every speech backend feature so the
# state machine can compose VAD → STT → DialogueManager → TTS → cpal
# without further conditional compilation in the binary.
# `voice-loop` is the lifted shared state machine in primer-speech;
# it implies silero + whisper + piper + cpal so we list it once here.
speech = [
    "primer-speech/silero",
    "primer-speech/whisper",
    "primer-speech/piper",
    "primer-speech/cpal",
    "primer-speech/voice-loop",
]

# Supertonic 3 TTS as a voice-mode `--tts supertonic` choice. Additive to
# `speech` (forwards to primer-speech/supertonic). Opt-in because it pulls
# the vendored supertonic-rs crate + ort ONNX-runtime download. Hindi /
# Japanese unlock — see issue #170.
supertonic = ["speech", "primer-speech/supertonic"]

# macOS-native speech backends (SFSpeechRecognizer + AVSpeechSynthesizer).
# Combine with `speech` for an Apple-native voice loop. No effect on
# non-macOS builds (the underlying primer-speech feature is a no-op there).
macos-native = ["primer-speech/macos-native"]

# macOS 26+ SpeechAnalyzer-backed STT + AVSpeechSynthesizer TTS.
# Mutually exclusive with `macos-native` — both enable an Apple-native
# voice loop but target different OS generations. A compile_error in
# main.rs enforces the exclusion. No effect on non-macOS builds.
macos-native-26 = ["primer-speech/macos-native-26"]

# Qualcomm NPU inference backend (Phase 1.2). Wires `--backend qnn`
# through to `QnnBackend` via `primer-engine`. The flags
# `--qnn-bundle-dir` and `--qnn-qairt-lib-dir` are declared only when
# this feature is on so the default `--help` stays uncluttered.
# Targets Android in production; on a non-Android host the runtime
# error from `primer-qnn-sys::GenieLibrary::open` (PlatformUnsupported)
# surfaces cleanly via the existing inference-error rendering.
qnn = ["primer-inference/qnn", "primer-engine/qnn"]

# Embedded llama.cpp backend (Phase 1.1). Wires `--backend llamacpp` through
# to `LlamaCppBackend`. GPU variants forward to the binding's backend
# features. Non-default (compiles llama.cpp C++). GPU variants chain to the
# base `llamacpp` feature so (a) primer-engine's real `build_llamacpp_backend`
# arm activates and (b) the `#[cfg(feature = "llamacpp")]`-gated `--llamacpp-*`
# flags appear in `--help` on GPU builds too.
llamacpp = ["primer-inference/llamacpp", "primer-engine/llamacpp"]
llamacpp-metal = ["llamacpp", "primer-inference/llamacpp-metal", "primer-engine/llamacpp-metal"]
llamacpp-cuda = ["llamacpp", "primer-inference/llamacpp-cuda", "primer-engine/llamacpp-cuda"]
llamacpp-vulkan = ["llamacpp", "primer-inference/llamacpp-vulkan", "primer-engine/llamacpp-vulkan"]
