[package]
name = "primer-engine"
description = "Shared wiring helpers for primer-cli and primer-gui (backend construction, path resolution, learner reconciliation)"
version.workspace = true
edition.workspace = true

[dependencies]
primer-core.workspace = true
primer-classifier.workspace = true
primer-extractor.workspace = true
primer-comprehension.workspace = true
primer-inference = { path = "../primer-inference" }
primer-embedding = { path = "../primer-embedding" }
chrono.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true

[dev-dependencies]
primer-storage = { path = "../primer-storage" }
tokio.workspace = true

[features]
default = []

# Hybrid retrieval via the fastembed-rs (BGE-M3) backend. Mirrors the
# matching feature on primer-cli/primer-gui so each binary can opt in
# independently. The feature plumbs through to primer-embedding.
embedding = ["primer-embedding/fastembed"]

# Lightweight Ollama-backed embedder.
ollama-embedding = ["primer-embedding/ollama"]

# OpenAI-compatible embedder (oMLX, LM Studio, vLLM, Together, etc.).
openai-compat-embedding = ["primer-embedding/openai-compat"]

# Qualcomm NPU inference backend (Phase 1.2). Adds the `qnn` arm to
# `build_backend` and pulls in `primer-inference/qnn` so the safe
# `QnnBackend` wrapper is in the dep graph. Disabled by default; the
# wiring still compiles on non-Android hosts because
# `QnnBackend::new` returns a typed `PlatformUnsupported` error from
# `primer-qnn-sys` rather than failing to link.
qnn = ["primer-inference/qnn"]
